# library-management

./: db.sqlite3  pyproject.toml  requirements.txt
Library_management/: settings.py  urls.py
templates/: base_generic.html  index.html
templates/catalog/: book_list.html
templates/registration/: login.html
