[tool.poetry]
name = "library-management-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-crispy-forms = "^2.1"
graphviz = "^0.20.3"
django-extensions = "^3.2.3"
pydot = "^2.0.0"
pillow = "^10.2.0"
crispy-bootstrap4 = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
